# connect4

./: CMakeLists.txt  README.md
src/: Board.cpp  Board.hpp  Game.cpp  Game.hpp  HybridPlayer.cpp  HybridPlayer.hpp  MonteCarloPlayer.cpp  MonteCarloPlayer.hpp  Player.hpp  RandomPlayer.cpp  RandomPlayer.hpp  TermPlayer.cpp  TermPlayer.hpp  main.cpp
test/: all_tests.cpp  board_tests.cpp
